// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render external HomeLink 1`] = `
<div
  className="homeLink"
>
  <a
    className="homeLink__link"
  >
    <p
      className="homeLink__link-text"
    >
      <p>
        HomeLink External
      </p>
    </p>
  </a>
</div>
`;

exports[`Render external HomeLink with icon 1`] = `
<div
  className="homeLink"
>
  <a
    className="homeLink__link"
  >
    <img
      className="homeLink__icon"
      src="icon!"
    />
    <p
      className="homeLink__link-text"
    >
      <p>
        HomeLink External
      </p>
    </p>
  </a>
</div>
`;

exports[`Render external HomeLink with linkText 1`] = `
<div
  className="homeLink"
>
  <a
    className="homeLink__link"
  >
    <p
      className="homeLink__link-text"
    >
      LinkText!
    </p>
  </a>
</div>
`;

exports[`Render internal HomeLink with icon 1`] = `
<div
  className="homeLink"
>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    className="homeLink__link"
  >
    <img
      className="homeLink__icon"
      src="icon!"
    />
    <p
      className="homeLink__link-text"
    >
      <p>
        HomeLink Internal
      </p>
    </p>
  </NavLink>
</div>
`;

exports[`Render internal HomeLink with linkText 1`] = `
<div
  className="homeLink"
>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    className="homeLink__link"
  >
    <p
      className="homeLink__link-text"
    >
      LinkText!
    </p>
  </NavLink>
</div>
`;

exports[`Render internal HomeLink without props 1`] = `
<div
  className="homeLink"
>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    className="homeLink__link"
  >
    <p
      className="homeLink__link-text"
    >
      <p>
        HomeLink Internal
      </p>
    </p>
  </NavLink>
</div>
`;
